--- a/.github/workflows/pr-docs.yaml
+++ b/.github/workflows/pr-docs.yaml
@@ -13,15 +13,15 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install .[dev]
+          uv pip install -e .
       
       - name: Format check
         run: make format-check
