--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
           python-version: '3.10'
       - name: Install dependencies
         run: |
-          uv pip install -e .
+          uv pip install -e . --system
       
       - name: Format check
         run: make format-check
