--- a/.github/workflows/pr-full.yaml
+++ b/.github/workflows/pr-full.yaml
@@ -24,7 +24,7 @@ jobs:
           python-version: '3.10'
       - name: Install dependencies
         run: |
-          uv pip install -e . --system
+          uv pip install .[dev] --system
       
       - name: Format check
         run: make format-check
