--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -70,10 +70,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install build twine
       
-      - name: Build and publish
-        env:
-          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      - name: Build package
         run: |
           python -m build
           twine upload dist/*
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI }}
+          skip-existing: true
